--- a/quant-ph-0209123/mq-anglais.tex
+++ b/quant-ph-0209123/mq-anglais.tex
@@ -175,7 +175,7 @@ beyond the formalism of the wave function (or its equivalent, the state vector
 $|\Psi\rangle $\footnote{In all this article, we will not make any distinction
 between the words ``wave function'' and ``state vector''.}) and complete it;
 for some physicists, the Copenhagen interpretation also includes the difficult
-notion of ``complementarity''.... even if it is true that, depending on the
+notion of ``complementarity''\ldots  even if it is true that, depending on the
 context, complementarity comes in many varieties and has been interpreted in
 many different ways! By and large, the impression of the vast majority was
 that Bohr had eventually won the debate with Einstein, so that discussing
@@ -602,7 +602,7 @@ usual proviso: short quotations taken out of their context may, sometimes,
 give a superficial view on the position of their authors.} various positions:
 
 (i) Bohr (second ref. \cite{Jammer}, page 204): \ ``There is no quantum
-world......it is wrong to think that the task of physics is to find out how
+world\ldots ..it is wrong to think that the task of physics is to find out how
 Nature is.\ Physics concerns what we can say about Nature''.
 
 (ii) Heisenberg (same ref. page 205): ``But the atoms or the elementary
@@ -1236,7 +1236,7 @@ way disturbing a system'.\ Of course there is in a case like that considered
 investigation during the last critical stage of the measuring procedure.\ But
 even at this stage there is essentially the question of an influence of the
 very conditions which define the possible types of predictions regarding the
-future behavior of the system.... the quantum description may be characterized
+future behavior of the system\ldots  the quantum description may be characterized
 as a rational utilization of all possibilities of unambiguous interpretation
 of measurements, compatible with the finite and uncontrollable interactions
 between the objects and the measuring instruments in the field of quantum theory''.
@@ -1671,7 +1671,7 @@ state vector of the form:%
 \begin{equation}
 |\Psi\rangle =\alpha|+,-\rangle +\beta|-,+\rangle +\gamma|+,+\rangle  \label{h1}%
 \end{equation}
-where the $|\pm,\pm>$ refer to eigenstates of $A^{^{\prime}}$ and
+where the $|\pm,\pm\rangle$ refer to eigenstates of $A^{^{\prime}}$ and
 $B^{^{\prime}}$ (NB: axis $Oz$ is chosen as the direction of measurement
 associated with primed operators). From the beginning, the absence of any
 $|\Psi\rangle $ component on $|-,-\rangle $ ensures that proposition (iii) is
@@ -1787,7 +1787,7 @@ that the system is described by the quantum state:%
 \begin{equation}
 |\Psi\rangle =\frac{1}{\sqrt{2}}\left[  |+,+,+\rangle -|-,-,-\rangle \right]  \label{7}%
 \end{equation}
-where the $|\pm>$ states are the eigenstates of the spins along the $Oz$
+where the $|\pm\rangle$ states are the eigenstates of the spins along the $Oz$
 axis of an orthonormal frame $Oxyz$. We now calculate the quantum
 probabilities of measurements of the spins $\sigma_{1,2,3}$ \ of the three
 particles, either along direction $Ox$, or along direction $Oy$ which is
@@ -1935,7 +1935,7 @@ context; for instance, the theorem applies to a single system with no
 extension in space.
 
 Let us first consider a spin 1 particle in quantum mechanics, with three
-quantum states $|-1>$ $|0>$ and $|+1>$ as a basis of a state space of
+quantum states $|\!-1\rangle$, $|0\rangle$ and $|+1\rangle$ as a basis of a state space of
 the dimension 3.\ The three components $S_{x}$, $S_{y}$, and $S_{z}$, do not
 commute (they obey the usual commutation relation for the angular momentum),
 but it is easy to show that all the squares of all these three operators do
@@ -2173,8 +2173,8 @@ hold, and the rest of the proof of the inequality would immediately collapse..
 Of course, no problem occurs if every emitted pair\ is detected and provides
 two results $\pm1$, one on each side, whatever the choice of $a$ and $b$ (and
 even if this choice is made after the emission of the pair).\ It then makes
-sense to obtain the ensemble average $<M>$ from successive measurements of
-four average values $<AB>$, $<AB^{\prime}>$, etc..\ But, if many pairs are
+sense to obtain the ensemble average $\langle M\rangle$ from successive measurements of
+four average values $\langle AB\rangle$, $\langle AB^{\prime}\rangle$, etc..\ But, if many pairs are
 undetected, one can not be completely sure that the detection efficiency
 remains independent of the settings $a$ and $b$; if it is not, the four
 averages may in principle correspond to different sub-ensembles, and there is
@@ -2308,7 +2308,7 @@ of view, and the notion of arbitrary external parameters is generally
 accepted; in the words of Bell \cite{Bell-once-only}: ``A respectable class of
 theories, including quantum theory as it is practised, have free external
 variables in addition to those internal to and conditioned by the
-theory....They are invoked to represent the experimental conditions.\ They
+theory\ldots They are invoked to represent the experimental conditions.\ They
 also provide a point of leverage for free willed experimenters,
 ...''.\ Needless to say, the fatalist attitude in science is even more subject
 to the difficulties of orthodox quantum mechanics concerning the impossibility
@@ -2393,7 +2393,7 @@ just absurd to request a local formalism from a non-orthodox theory -
 especially when the theory in question is built in order to reproduce all
 results of quantum mechanics! As an illustration of this point, as seen from
 theories with additional variables, we quote Goldstein \cite{Goldstein}: ``in
-recent years it has been common to find physicists .... failing to appreciate
+recent years it has been common to find physicists \ldots  failing to appreciate
 that what Bell demonstrated with his theorem was not the impossibility of
 Bohmian mechanics, but rather a more radical implication - namely non-locality
 - that is intrinsic to quantum theory itself''.
@@ -2415,7 +2415,7 @@ all-or-nothing states for short) could also be called ``many-particle GHZ
 states'' since they are generalizations of (\ref{7}) to an arbitrary number
 $N$ of particles:%
 \begin{equation}
-|\Psi\rangle =\alpha|1:+;2:+;....;N:+\rangle +\beta|1:-;2:-;...;N:-\rangle  \label{20}%
+|\Psi\rangle =\alpha|1:+;2:+;\ldots ;N:+\rangle +\beta|1:-;2:-;...;N:-\rangle  \label{20}%
 \end{equation}
 where $\alpha$ and $\beta$ are arbitrary complex numbers satisfying $\left|
 \alpha\right|  ^{2}+\left|  \beta\right|  ^{2}=1$. In fact, the most
@@ -2445,7 +2445,7 @@ filter, namely:%
 [c]{cl}%
 |\Psi\rangle = & \left[  \alpha|1:+\rangle +\beta|\overset{}{1}:-\rangle \right]
 \otimes\left[  \alpha|2:+\rangle +\beta|\overset{}{2}:-\rangle \right]  \otimes\\
-& \otimes....\otimes\left[  \alpha| N:+\rangle +\beta|\overset{}{N}:-\rangle \right]
+& \otimes \ldots \otimes\left[  \alpha| N:+\rangle +\beta|\overset{}{N}:-\rangle \right].
 \end{array}
 \label{21}%
 \end{equation}
@@ -2472,7 +2472,7 @@ appears and introduces effects which are completely non-classical.
 
 Assume for instance that:%
 \begin{equation}
-\alpha=1/\sqrt{2}\,\,\,\,\,\,\,\,\,;\,\,\,\,\,\,\,\,\,\,\beta=e^{i\varphi
+\alpha=1/\sqrt{2} ; \quad \beta=e^{i\varphi
 }/\sqrt{2} \label{21bis}%
 \end{equation}
 and that a measurement is performed of a component of each spin that belongs
@@ -2481,11 +2481,11 @@ first particle, $\theta_{2}$ for the second,...$\theta_{N}$ for the last. It
 is an easy exercise of standard quantum mechanics to show that the product of
 all results has the following average value:
 \begin{equation}
-E(\theta_{1},\theta_{2},....\theta_{N})=\cos(\theta_{1}+\theta_{2}%
-+....\theta_{N}-\varphi) \label{211}%
+E(\theta_{1},\theta_{2},\ldots, \theta_{N})=\cos(\theta_{1}+\theta_{2}%
++\ldots + \theta_{N}-\varphi) \label{211}%
 \end{equation}
 (we take the usual convention where the results of each measurement is $\pm
-1$). For instance, each time the sum $\theta_{1}+\theta_{2}+....\theta
+1$). For instance, each time the sum $\theta_{1}+\theta_{2}+\ldots + \theta
 _{N}-\varphi$ is equal to an integer even multiple of $\pi$, the average is
 $1$, indicating that the result is certain and free from any fluctuation (in
 the same way, an odd multiple of $\pi$ would give a certain value, $-1$).
@@ -2544,12 +2544,12 @@ spin directions to the positions of the particles. Under these conditions, it
 is easy to see that the coherence contained in the state vector becomes
 extremely fragile to any interaction with environment.\ To see why, let us
 assume that an elementary particle (photon for instance), initially in state
-$|\mathbf{k}_{0}>$, interacts with the particles.\ It will then scatter
+$|\mathbf{k}_{0}\rangle$, interacts with the particles.\ It will then scatter
 into a quantum state that is completely different, depending on where the
 scattering event took place: if the scattering atoms are in the first state
 $|+\rangle $, the photon is scattered by the atoms into state $|\mathbf{k}%
-_{+}>$; on the other hand, if it interacts with atoms in state $|-\rangle $, it is
-scattered into state $|\mathbf{k}_{-}>$ \footnote{We could also have
+_{+}\rangle$; on the other hand, if it interacts with atoms in state $|-\rangle $, it is
+scattered into state $|\mathbf{k}_{-}\rangle$ \footnote{We could also have
 assumed that the photon is focussed so that it can interact only with one sort
 of atoms, but is not scattered by the other, without changing the conclusion
 of this discussion.}. As soon as the new particle becomes correlated with the
@@ -2559,9 +2559,9 @@ incorporate this new particle as well, and becomes:%
 \begin{equation}%
 \begin{array}
 [c]{cl}%
-|\Psi^{^{\prime}}>= & \alpha|1:+;2:+;....;N:+\rangle \otimes|\mathbf{k}%
-_{+}>+\\
-& +\beta|1:-;2:-;...N:-\rangle \otimes|\mathbf{k}_{-}>
+|\Psi^{^{\prime}}\rangle = & \alpha|1:+;2:+;\ldots ;N:+\rangle \otimes|\mathbf{k}%
+_{+}\rangle +\\
+& +\beta|1:-;2:-;...N:-\rangle \otimes|\mathbf{k}_{-}\rangle
 \end{array}
 \label{23}%
 \end{equation}
@@ -2573,19 +2573,19 @@ difficult) to detect (e.g. it may be a far-infrared photon).\ It is then
 useful to calculate the partial trace over this photon in order to obtain the
 density operator which describes the atoms only.\ A straightforward
 calculation shows that this partial trace can be written, in the basis of the
-two states $|+,+,+,..>$ and $|-,-,-,..>:$%
+two states $|+,+,+,..\rangle$ and $|-,-,-,\dots\rangle$:
 \begin{equation}
 \rho=\left(
 \begin{array}
 [c]{cc}%
-|\alpha|^{2} & \alpha\beta^{\ast}<\mathbf{k}_{-}|\mathbf{k}_{+}>\\
-\alpha^{\ast}\beta<\mathbf{k}_{+}|\mathbf{k}_{-}> & |\beta|^{2}%
+|\alpha|^{2} & \alpha\beta^{\ast}\langle\mathbf{k}_{-}|\mathbf{k}_{+}\rangle\\
+\alpha^{\ast}\beta\langle\mathbf{k}_{+}|\mathbf{k}_{-}\rangle & |\beta|^{2}%
 \end{array}
 \right)  \label{24}%
 \end{equation}
-(for the sake of simplicity we assume that the states $|\mathbf{k}_{\pm}>$
+(for the sake of simplicity we assume that the states $|\mathbf{k}_{\pm}\rangle$
 are normalized). We see in this formula that, if the scalar product
-$<\mathbf{k}_{-}|\mathbf{k}_{+}>$ was equal to one, the density matrix of
+$\langle \mathbf{k}_{-}|\mathbf{k}_{+}\rangle$ was equal to one, the density matrix of
 the atoms would not be affected at all by the scattering of the single
 photon.\ But this would assume that the photon is scattered exactly into the
 same state, independently of the spatial location of the scatterers! This
@@ -2597,12 +2597,12 @@ scattering of even a single particle destroys the coherence between atomic
 states, as soon as they are located at different places.
 
 The situation becomes even worse when more and more photons (assumed to be all
-in the same initial state $|\mathbf{k}_{0}>$) are scattered, since one then
+in the same initial state $|\mathbf{k}_{0}\rangle$) are scattered, since one then
 has to replace (\ref{23}) by the state:%
 \begin{equation}%
 \begin{array}
 [c]{cl}%
-|\Psi^{^{\prime}}>= & \alpha|1:+;2:+;....;N:+\rangle \otimes|\mathbf{k}%
+|\Psi^{^{\prime}}\rangle = & \alpha|1:+;2:+;\ldots ;N:+\rangle \otimes|\mathbf{k}%
 _{+}>|\mathbf{k}_{+}^{^{\prime}}>|\mathbf{k}_{+}^{^{^{\prime\prime}}%
 }>..+\\
 & +\beta|1:-;2:-;...N:-\rangle \otimes|\mathbf{k}_{-}>|\mathbf{k}%
@@ -2625,10 +2625,10 @@ _{+}><\mathbf{k}_{-}^{^{\prime}}|\mathbf{k}_{+}^{^{\prime}}>...\\
 \right)  \label{26}%
 \end{equation}
 Since we now have, in the off-diagonal elements, the product of all single
-scalar product $<\mathbf{k}_{-}|\mathbf{k}_{+}>$, it is clear that these
+scalar product $\langle \mathbf{k}_{-}|\mathbf{k}_{+}\rangle$, it is clear that these
 elements are even more negligible than when a single photon is scattered.
-Actually, as soon as the two states $|\mathbf{k}_{+}>$ and $|
-\mathbf{k}_{-}>$ are not strictly identical, they tend exponentially to zero
+Actually, as soon as the two states $|\mathbf{k}_{+}\rangle$ and $|
+\mathbf{k}_{-}\rangle$ are not strictly identical, they tend exponentially to zero
 with the number of scattering events.
 
 This is a completely general property: objects (especially macroscopic
@@ -2783,7 +2783,7 @@ them to measure their properties, and re-send the last of them on the line so
 that no-one will notice anything.\ But, it turns out that ''quantum cloning''
 is fundamentally impossible: within the rules of quantum mechanics, there is
 absolutely no way in which several particles can be put into the same
-arbitrary and unknown state $|\varphi>$ as one given particle
+arbitrary and unknown state $|\varphi\rangle$ as one given particle
 \cite{Wooters-Zurek} \cite{Dieks} - see also \cite{Gisin-Massar} for a
 discussion of multiple cloning. In appendix IV we discuss why, if state
 cloning were possible, it would be possible to apply it to each particle of an
@@ -2813,15 +2813,15 @@ $N=2$), in order to reproduce at a distance any arbitrary spin state of a
 third particle. The scenario is the following: initially, two entangled
 particles propagate towards two remote regions of space; one of them reaches
 the laboratory of the first actor, Alice, while the second reaches that of the
-second actor, Bob; a third particle in quantum state $|\varphi>$ is then
+second actor, Bob; a third particle in quantum state $|\varphi\rangle$ is then
 provided to Alice in her laboratory; the final purpose of the all the scenario
-is to put Bob's particle into exactly the same state $|\varphi>$, whatever
+is to put Bob's particle into exactly the same state $|\varphi\rangle$, whatever
 it is (without, of course, transporting the particle itself). One then says
-that sate $|\varphi>$ has been teleported.
+that sate $|\varphi\rangle$ has been teleported.
 
 More precisely, what procedure is followed in teleportation?\ Alice has to
 resist the temptation of performing any measurement on the particle in state
-$|\varphi>$ to be teleported; instead, she performs a ``combined
+$|\varphi\rangle$ to be teleported; instead, she performs a ``combined
 measurement'' that involves at the same time this particle as well as her
 particle from the entangled pair.\ In fact, for the teleportation process to
 work, an essential feature of this measurement is that no distinction between
@@ -2836,7 +2836,7 @@ e-mail etc., that is by a method that is not instantaneous but submitted to
 the limitations related to the finite velocity of light.\ Finally, Bob applies
 to his particle an unitary transformation that depends on the classical
 information he has received; this operation puts it exactly into the same
-state $|\varphi>$ as the initial state of the third particle, and realizes
+state $|\varphi\rangle$ as the initial state of the third particle, and realizes
 the ``teleportation'' of the state.\ The whole scenario is ``mixed'' because
 it involves a combination of transmission of quantum information (through the
 entangled state) and classical information (the phone call from Alice to Bob).
@@ -2952,7 +2952,7 @@ calculations, not on classical ``bits'', which can be only in two discrete
 states (corresponding to 0 and 1 in usual binary notation), but on quantum
 bits, or ``q-bits'', that is on quantum systems that have access to a
 two-dimensional space of states; this means that q-bits can not only be in one
-of the two states $|0>$ and $|1>$, but also in any linear superposition
+of the two states $|0\rangle$ and $|1\rangle$, but also in any linear superposition
 of them.\ It is clear that a continuum of states is a much ``larger'' ensemble
 than two discrete states only; in fact, for classical bits, the dimension of
 the state space increases linearly with the number of bits (for instance, the
@@ -3120,16 +3120,16 @@ more elaborate treatment is needed.} of a physical quantity associated with
 operator $M$ is performed at time $t_{1}$, and call $m$ the possible results;
 this is followed by another measurement of observable $N$ at time $t_{2}$,
 with possible results $n$, etc.\ Initially, we assume that the system is
-described by a pure state $|\Psi(t_{0})>$, but below we generalize to a
+described by a pure state $|\Psi(t_{0})\rangle$, but below we generalize to a
 density operator $\rho(t_{0})$. According to the Schr\"{o}dinger equation, the
 state vector evolves between time $t_{0}$ and time $t_{1}$ from $|
-\Psi(t_{0})>$ to $|\Psi(t_{1})>$; let us then expand this new state into
+\Psi(t_{0})\rangle$ to $|\Psi(t_{1})\rangle$; let us then expand this new state into
 its components corresponding to the various results that can be obtained at
 time $t_{1}$:%
 \begin{equation}
 |\Psi(t_{1})>=\sum_{m}|\Psi_{m}(t_{1})> \label{dec-1}%
 \end{equation}
-where$|\Psi_{m}(t_{1})>$ is obtained by applying to $|\Psi(t_{1})>$ the
+where$|\Psi_{m}(t_{1})\rangle$ is obtained by applying to $|\Psi(t_{1})\rangle$ the
 projector $P_{M}(m)$ on the subspace corresponding to result $m$:
 \begin{equation}
 |\Psi_{m}(t_{1})>=P_{M}(m)|\Psi(t_{1})> \label{dec-2}%
@@ -3142,21 +3142,21 @@ actually, each component becomes correlated to an orthogonal state of the
 environment (the pointer of the measurement apparatus for instance) and a full
 decoherence will ensure that any interference effect is cancelled.
 
-Each ``slice'' $|\Psi_{m}(t_{1})>$ of $|\Psi(t_{1})>$ can then be
+Each ``slice'' $|\Psi_{m}(t_{1})\rangle$ of $|\Psi(t_{1})\rangle$ can then be
 considered as independent from the others, and taken as a new initial state of
 the system under study.\ From time $t_{1}$ to time $t_{2}$, the state in
 question will then evolve under the effect of the Schr\"{o}dinger equation and
-become a state $|\Psi_{m}(t_{2})>$.\ For the second measurement, the
+become a state $|\Psi_{m}(t_{2})\rangle$.\ For the second measurement, the
 procedure repeats itself; we ``slice'' again this new state according to:%
 \begin{equation}
 |\Psi_{m}(t_{2})>=\sum_{n}|\Psi_{m,n}(t_{2})> \label{dec-3}%
 \end{equation}
-where $|\Psi_{m,n}(t_{2})>$ is obtained by the action of the projector
+where $|\Psi_{m,n}(t_{2})\rangle$ is obtained by the action of the projector
 $P_{N}(n)$ $\ $on the subspace corresponding to result $n$:%
 \begin{equation}
 |\Psi_{m,n}(t_{2})>=P_{N}(n)|\Psi_{m}(t_{2})> \label{dec-4}%
 \end{equation}
-The evolution of each $|\Psi_{m}(t_{2})>$ will now be considered
+The evolution of each $|\Psi_{m}(t_{2})\rangle$ will now be considered
 independently and, if a third measurement is performed at a later time $t_{3}%
 $, generate one more decomposition, and so on.\ It is easy to
 check\footnote{This can be done for instance by successive applications of the
@@ -3275,7 +3275,7 @@ _{M}(m;t_{1})$ is a projector over a subspace of more than one dimension:%
 dependence appears in this expression).\ Inserting this expression into
 (\ref{Wigner-proba}) immediately shows the appearance of interference terms
 (or crossed terms) $i\neq j$ between the contribution of the various
-$|\varphi_{i}>$.\ Assume, on the other hand, that more information was
+$|\varphi_{i}\rangle$.\ Assume, on the other hand, that more information was
 actually obtained in the first measurement, so that the value of $i$ was also
 determined, but that this information was lost, or forgotten; the experimenter
 ignores which of two or more $i$ results was obtained.\ Then, what should be
@@ -4080,7 +4080,7 @@ are expressed a more precise way.\ For instance, complementarity stands in the
 Copenhagen interpretation as a general, almost philosophical, principle.\ In
 the history interpretation, it is related to mathematical conditions, such as
 consistency conditions; also, every projector can not be more precise that the
-projector over a single quantum state $|\varphi>$, which is itself
+projector over a single quantum state $|\varphi\rangle$, which is itself
 obviously subject to the uncertainty relations because of the very structure
 of the space of states.\ Of course, considerations on incompatible measurement
 devices may still be made but, as the Bohrian distinction between the
@@ -4302,7 +4302,7 @@ never broken, and its tree is left free to develop its branch ad
 infinitum.\ The basic remark of this interpretation is that, for a composite
 system of correlated subsystems (observed system, measurement apparatus, and
 observer, all considered after a measurement), ``there does not exist anything
-like a single state for one subsystem....one can arbitrarily choose a state
+like a single state for one subsystem\ldots one can arbitrarily choose a state
 for one subsystem and be led to the relative state for the remainder'' - this
 is actually just a description of quantum entanglement, a well-known
 concept.\ But, now, the novelty is that the observer is considered as a purely
@@ -4494,7 +4494,7 @@ details of this calculation.\ The fluctuating random variable that introduces
 the correlations is called $\lambda$, and the density operator of the first
 spin $\rho_{1}(\lambda)$; for a direction of measurement defined by the unit
 vector $a$, the eigenstate of the measurement corresponding to result $+1$ is
-noted $|+/a>$.\ The probability for obtaining result $+$ if the first
+noted $|+/a\rangle$.\ The probability for obtaining result $+$ if the first
 measurement is made along direction $a$ is then written as:
 \begin{equation}
 \mathcal{P}_{+}(a,\lambda)=<+/a|\rho_{1}(\lambda)|+/a> \label{aa1}%
@@ -4644,21 +4644,21 @@ irrelevant; let us then begin with the operator associated with the first spin:%
 \end{equation}
 which provides:
 \begin{equation}
-\sigma_{1x}|\Psi\rangle =|\Psi^{^{\prime}}>=\eta|+,-,-\rangle +|-,+,+\rangle 
+\sigma_{1x}|\Psi\rangle =|\Psi^{^{\prime}}\rangle =\eta|+,-,-\rangle +|-,+,+\rangle 
 \label{a4}%
 \end{equation}
 For the second spin:
 \begin{equation}%
 \begin{array}
 [c]{ll}%
-\sigma_{2+}|\Psi^{^{\prime}}>= & 2\eta|+,+,-\rangle \\
-\sigma_{2-}|\Psi^{^{\prime}}>= & 2|-,-,+\rangle 
+\sigma_{2+}|\Psi^{^{\prime}}\rangle = & 2\eta|+,+,-\rangle \\
+\sigma_{2-}|\Psi^{^{\prime}}\rangle = & 2|-,-,+\rangle 
 \end{array}
 \label{a5}%
 \end{equation}
 so that:
 \begin{equation}
-\sigma_{2y}|\Psi^{^{\prime}}>=|\Psi^{^{\prime\prime}}>=\frac{1}%
+\sigma_{2y}|\Psi^{^{\prime}}\rangle =|\Psi^{^{\prime\prime}}>=\frac{1}%
 {i}\left(  \eta|+,+,-\rangle -|-,-,+\rangle \right)  \label{a6}%
 \end{equation}
 Finally, the third spin gives:
@@ -4684,7 +4684,7 @@ product operators $\sigma_{1y}\sigma_{2x}\sigma_{3y}$ and $\sigma_{1y}%
 Let us now calculate the effect of operator $\sigma_{1x}\sigma_{2x}\sigma
 _{3x}$ on $|\Psi\rangle $; from (\ref{a5}) we get:
 \begin{equation}
-\sigma_{2x}|\Psi^{^{\prime}}>=|\Psi^{^{\prime\prime\prime}}>=\left(
+\sigma_{2x}|\Psi^{^{\prime}}\rangle =|\Psi^{^{\prime\prime\prime}}>=\left(
 \eta|+,+,-\rangle +|-,-,+\rangle \right)  \label{a9}%
 \end{equation}
 so that:
@@ -4787,8 +4787,8 @@ results.\ The impossibility proof relies on the fact that all operators
 all operators corresponding to the other; consequently, for any choice of the
 operators, it is always possible to construct a common eigenbasis $\left\{
 |\varphi_{k}\,,\,\theta_{j}>\right\}  $ in the space of states of the
-two-particle system, where the $|\varphi_{k}>$'s are the eigenstates of
-$O_{A}$ and the $|\theta_{j}>$'s are the eigenstates of $O_{B}$.\ We can
+two-particle system, where the $|\varphi_{k}\rangle$'s are the eigenstates of
+$O_{A}$ and the $|\theta_{j}\rangle$'s are the eigenstates of $O_{B}$.\ We can
 then calculate the probability of sequences of measurement where the first
 operator obtains result $A_{m}$ (corresponding, if this eigenvalue is
 degenerate, to some range $D_{m}$ for the index $k$) and the second result
@@ -4819,9 +4819,9 @@ system; for instance, the probability of observing result $B_{n}$ is simply:%
 Equations (\ref{app4-1}) and (\ref{app4-2}) can be derived in different
 ways.\ One can for instance use formula (\ref{Wigner-proba}), if it has been
 proved before.\ Otherwise, one can proceed in steps: one first expands $\rho$
-in terms of projectors onto its own eigenstates $|\Psi_{l}>$, with positive
+in terms of projectors onto its own eigenstates $|\Psi_{l}\rangle$, with positive
 eigenvalues; one then applies the wave packet reduction postulate to each
-$|\Psi_{l}>$ separately in order to get the probability of any sequence of
+$|\Psi_{l}\rangle$ separately in order to get the probability of any sequence of
 results; one finally performs the sum over $l$ as well as the appropriate sum
 over indices $k$ (unknown result) and $j$ (if the observed eigenvalue is
 degenerate) in order to obtain the ``reduced probabilities'' - by these words
@@ -4994,7 +4994,7 @@ we now briefly sketch one possible systematic method to construct consistent
 families of histories.
 
 The simplest method is to guide the construction on the structure of
-(\ref{hist-5}), and to introduce the eigenstates $|\varphi_{n}^{0}>$ of the
+(\ref{hist-5}), and to introduce the eigenstates $|\varphi_{n}^{0}\rangle$ of the
 density operator $\rho(t_{0})$ (an Hermitian operator can always be
 diagonalized); let us then define the operators $\widehat{P}_{1,j_{1}}(t_{1})$
 as:%
@@ -5004,12 +5004,12 @@ as:%
 \end{equation}
 which is equivalent to assuming that their Schr\"{o}dinger counterparts
 $P_{1,j}$ are the projectors over the states that have evolved from the
-$|\varphi_{n}^{0}>$'s from time $t_{0}$ to time $t_{1}$. Because
+$|\varphi_{n}^{0}\rangle$'s from time $t_{0}$ to time $t_{1}$. Because
 $\rho(t_{0})$ is of course diagonal in its own basis, this choice already
 ensures the presence of a factor $\delta_{j_{1},j_{1}^{^{\prime}}}$ in the
 right hand side of (\ref{hist-5}).\ Now, we can also assume that the
 $P_{2,j_{2}}$'s are defined as the projectors over the states that have
-evolved from the $|\varphi_{n}^{0}>$'s from time $t_{0}$ to time $t_{2}$,
+evolved from the $|\varphi_{n}^{0}\rangle$'s from time $t_{0}$ to time $t_{2}$,
 so that a relation similar to (\ref{hist-6}) is again obtained; this will
 ensure, not only the presence of factors $\delta_{j_{2},j_{2}^{^{\prime}}}$.
 in the right hand side of (\ref{hist-5}), but actually also the appearance of
