--- a/quant-ph-0209123/mq-anglais.tex
+++ b/quant-ph-0209123/mq-anglais.tex
@@ -3127,12 +3127,12 @@ state vector evolves between time $t_{0}$ and time $t_{1}$ from $|
 its components corresponding to the various results that can be obtained at
 time $t_{1}$:%
 \begin{equation}
-|\Psi(t_{1})>=\sum_{m}|\Psi_{m}(t_{1})> \label{dec-1}%
+|\Psi(t_{1})\rangle = \sum_{m}|\Psi_{m}(t_{1})> \label{dec-1}%
 \end{equation}
 where$|\Psi_{m}(t_{1})\rangle$ is obtained by applying to $|\Psi(t_{1})\rangle$ the
 projector $P_{M}(m)$ on the subspace corresponding to result $m$:
 \begin{equation}
-|\Psi_{m}(t_{1})>=P_{M}(m)|\Psi(t_{1})> \label{dec-2}%
+|\Psi_{m}(t_{1})\rangle = P_{M}(m)|\Psi(t_{1})> \label{dec-2}%
 \end{equation}
 Now, just after the first measurement, we can ``chop'' the state vector into
 different ``slices'', which are each of the terms contained in the sum of
@@ -3149,12 +3149,12 @@ question will then evolve under the effect of the Schr\"{o}dinger equation and
 become a state $|\Psi_{m}(t_{2})\rangle$.\ For the second measurement, the
 procedure repeats itself; we ``slice'' again this new state according to:%
 \begin{equation}
-|\Psi_{m}(t_{2})>=\sum_{n}|\Psi_{m,n}(t_{2})> \label{dec-3}%
+|\Psi_{m}(t_{2})\rangle = \sum_{n}|\Psi_{m,n}(t_{2})> \label{dec-3}%
 \end{equation}
 where $|\Psi_{m,n}(t_{2})\rangle$ is obtained by the action of the projector
 $P_{N}(n)$ $\ $on the subspace corresponding to result $n$:%
 \begin{equation}
-|\Psi_{m,n}(t_{2})>=P_{N}(n)|\Psi_{m}(t_{2})> \label{dec-4}%
+|\Psi_{m,n}(t_{2})\rangle = P_{N}(n)|\Psi_{m}(t_{2})> \label{dec-4}%
 \end{equation}
 The evolution of each $|\Psi_{m}(t_{2})\rangle$ will now be considered
 independently and, if a third measurement is performed at a later time $t_{3}%
@@ -4658,21 +4658,21 @@ For the second spin:
 \end{equation}
 so that:
 \begin{equation}
-\sigma_{2y}|\Psi^{^{\prime}}\rangle =|\Psi^{^{\prime\prime}}>=\frac{1}%
+\sigma_{2y}|\Psi^{^{\prime}}\rangle =|\Psi^{^{\prime\prime}}\rangle = \frac{1}%
 {i}\left(  \eta|+,+,-\rangle -|-,-,+\rangle \right)  \label{a6}%
 \end{equation}
 Finally, the third spin gives:
 \begin{equation}%
 \begin{array}
 [c]{ll}%
-\sigma_{3+}|\Psi^{^{\prime\prime}}>= & -2i\eta|+,+,+\rangle \\
-\sigma_{3-}|\Psi^{^{\prime\prime}}>= & +2i|-,-,-\rangle 
+\sigma_{3+}|\Psi^{^{\prime\prime}}\rangle =  & -2i\eta|+,+,+\rangle \\
+\sigma_{3-}|\Psi^{^{\prime\prime}}\rangle =  & +2i|-,-,-\rangle 
 \end{array}
 \label{a7}%
 \end{equation}
 which leads to:
 \begin{equation}
-\sigma_{3y}|\Psi^{^{\prime\prime}}>=-\eta|+,+,+\rangle -|-,-,-\rangle =-\eta
+\sigma_{3y}|\Psi^{^{\prime\prime}}\rangle = -\eta|+,+,+\rangle -|-,-,-\rangle =-\eta
 |\Psi\rangle  \label{a8}%
 \end{equation}
 (since $\eta^{2}=1$). Indeed, we find that $|\Psi\rangle $ is an eigenstate of the
@@ -4684,21 +4684,21 @@ product operators $\sigma_{1y}\sigma_{2x}\sigma_{3y}$ and $\sigma_{1y}%
 Let us now calculate the effect of operator $\sigma_{1x}\sigma_{2x}\sigma
 _{3x}$ on $|\Psi\rangle $; from (\ref{a5}) we get:
 \begin{equation}
-\sigma_{2x}|\Psi^{^{\prime}}\rangle =|\Psi^{^{\prime\prime\prime}}>=\left(
+\sigma_{2x}|\Psi^{^{\prime}}\rangle =|\Psi^{^{\prime\prime\prime}}\rangle = \left(
 \eta|+,+,-\rangle +|-,-,+\rangle \right)  \label{a9}%
 \end{equation}
 so that:
 \begin{equation}%
 \begin{array}
 [c]{ll}%
-\sigma_{3+}|\Psi^{^{\prime\prime\prime}}>= & 2\eta|+,+,+\rangle \\
-\sigma_{3-}|\Psi^{^{\prime\prime\prime}}>= & 2|-,-,-\rangle 
+\sigma_{3+}|\Psi^{^{\prime\prime\prime}}\rangle =  & 2\eta|+,+,+\rangle \\
+\sigma_{3-}|\Psi^{^{\prime\prime\prime}}\rangle =  & 2|-,-,-\rangle 
 \end{array}
 \label{a10}%
 \end{equation}
 and, finally:
 \begin{equation}
-\sigma_{3x}|\Psi^{^{\prime\prime\prime}}>=\eta|+,+,+\rangle +|
+\sigma_{3x}|\Psi^{^{\prime\prime\prime}}\rangle = \eta|+,+,+\rangle +|
 -,-,-\rangle =\eta|\Psi\rangle  \label{a11}%
 \end{equation}
 The change of sign between (\ref{a8}) and (\ref{a11}) may easily be understood
@@ -4806,7 +4806,7 @@ to the notion of ``partial trace'' $\rho_{B}$ over the variables of the
 sub-system $A$.\ This operator acts only in the space of states of system $B$
 and is defined by its matrix elements:%
 \begin{equation}
-<\theta_{i}|\rho_{B}|\theta_{j}>=\sum_{k}<\varphi_{k},\,\theta_{i}%
+<\theta_{i}|\rho_{B}|\theta_{j}\rangle = \sum_{k}<\varphi_{k},\,\theta_{i}%
 |\rho|\varphi_{k}\,,\,\theta_{j}> \label{app4-1}%
 \end{equation}
 It contains all information that the second experimenter needs for making
