--- a/1812.08218/epi-meas-update.tex
+++ b/1812.08218/epi-meas-update.tex
@@ -19,7 +19,7 @@
 %  4)  latex apssamp.tex 
 %  
 \documentclass[%
- reprint,
+ reprint, onecolumn, 12pt,
 superscriptaddress,
 % groupedaddress,
 %unsortedaddress,
@@ -30,7 +30,7 @@ superscriptaddress,
 nofootinbib,
 %nobibnotes,
 %bibnotes,
- amsmath,amssymb,
+% amsmath,amssymb,
  % aps,
 % pra,
 % prb,
@@ -40,8 +40,10 @@ nofootinbib,
 %prstper,
 %floatfix,
 % longbibliography,
- accepted=2019-09-27,
+%accepted=2019-09-27,
 ]{quantumarticle}
+
+\usepackage{amsmath,amsthm,amscd,amssymb}
 
 \usepackage{graphicx}% Include figure files
 \usepackage{dcolumn}% Align table columns on decimal point
@@ -61,7 +63,6 @@ nofootinbib,
 \usepackage[numbers]{natbib}
 \usepackage{graphicx}
 \usepackage{subcaption}
-\usepackage[colorlinks=true]{hyperref}
 \usepackage{physics}
 \usepackage[draft,% inline,nomargin,
 author=]{fixme}
@@ -69,6 +70,8 @@ author=]{fixme}
 \makeatletter
 \def\@lox@prtc{\section*{\@fxlistfixmename}\begingroup\def\@dotsep{4.5}}
 \def\@lox@psttc{\endgroup}
+\def\@afterenddocumenthook{\relax}
+
 \makeatother
 
 \usepackage[english]{babel}
@@ -94,7 +97,44 @@ text width=1.1em, text badly centered]
 
 \usepackage{qcircuit}
  
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
 
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
 \usepackage{amsthm}
 \newtheorem{definition}{Definition}
@@ -129,7 +169,7 @@ text width=1.1em, text badly centered]
 \begin{document}
 
 
-\title{$\psi$-epistemic interpretations of quantum theory have a measurement problem}% Force line breaks with \\
+\title{$\psi$-epistemic Interpretations of Quantum Theory Have a Measurement Problem}% Force line breaks with \\
 
 \author{Joshua B. Ruebeck}
 \email{jbruebeck@uwaterloo.ca}
@@ -171,10 +211,13 @@ text width=1.1em, text badly centered]
 
 \maketitle
 
+\pagestyle{plain}
+
 %\tableofcontents 
 % \listoffixmes
  
- 
+\newpage
+
 \section{Introduction}
 \label{sec:introduction}
 
