--- a/1404.2635/DecoherenceArXiv_v2.tex
+++ b/1404.2635/DecoherenceArXiv_v2.tex
@@ -1,9 +1,9 @@
 
-\documentclass[aps,pra,reprint,amsmath,amssymb,showpacs,nofootinbib,floatfix,onecolumn]{revtex4-1}
+\documentclass[aps,pra,reprint,amsmath,amssymb,showpacs,nofootinbib,floatfix,onecolumn,12pt]{revtex4-1}
 
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[noBBpl,sc]{mathpazo}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={7in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \linespread{1.1}
 \sloppy
 \raggedbottom
@@ -14,6 +14,7 @@
 \input{../helpers/fix-underbrace.tex}
 
 \usepackage[small]{titlesec}
+\usepackage{microtype}
 
 % hyperref last because otherwise some things go wrong.
 \usepackage[colorlinks=true
