--- a/1404.2635/DecoherenceArXiv_v2.tex
+++ b/1404.2635/DecoherenceArXiv_v2.tex
@@ -8,7 +8,9 @@
 \sloppy
 \raggedbottom
 \pagestyle{plain}
-
+\makeatletter
+\def\pdfstartlink@attr{}
+\makeatother
 % these include amsmath and that can cause trouble in older docs.
 \input{../helpers/cmrsum}
 \input{../helpers/fix-underbrace.tex}
@@ -48,7 +50,7 @@ bookmarksopenlevel=10
 \usepackage[usenames, dvipsnames]{color}
 %\usepackage[colorlinks,citecolor=BrickRed,urlcolor=BrickRed,linkcolor=BrickRed,hyperindex,breaklinks]{hyperref}
 
-\usepackage{url}
+%\usepackage{url}
 
 \newcommand{\lla}{\left\langle}
 \newcommand{\rra}{\right\rangle}
@@ -1015,12 +1017,6 @@ Decoherence has been used to identify internal concistency issues in interpretat
 % \bibliography{../bib/References}
 
 \begin{thebibliography}{100}
-\providecommand{\url}[1]{{#1}}
-\providecommand{\urlprefix}{URL }
-\expandafter\ifx\csname urlstyle\endcsname\relax
-  \providecommand{\doi}[1]{DOI \discretionary{}{}{}#1}\else
-  \providecommand{\doi}{DOI \discretionary{}{}{}\begingroup
-  \urlstyle{rm}\Url}\fi
 
 \bibitem{Zeh:1970:yt}
 H.D. Zeh, Found. Phys. \textbf{1}, 69 (1970)
