--- a/quant-ph-0302164/quant-ph-0302164-psu.tex
+++ b/quant-ph-0302164/quant-ph-0302164-psu.tex
@@ -1,13 +1,57 @@
-\documentclass[10pt,a4paper]{article}
+\documentclass[12pt]{article}
 %\usepackage{srcltx}
-\setlength{\textwidth}{13.0 cm} \setlength{\textheight}{22.5cm}
 % --- begin new commands
 \newcommand{\z}{\marginpar{Note change.}}
 \newcommand{\llangle}{\langle\!\langle}
 \newcommand{\rrangle}{\rangle\!\rangle}
 \newcommand{\LLangle}{\left\langle\!\!\!\left\langle}
 \newcommand{\RRangle}{\right\rangle\!\!\!\right\rangle}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={7in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+\usepackage{microtype}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 % --- end new commands
+
+
 \begin{document}
 \title{\bf Dynamical Reduction Models}
 
@@ -65,6 +109,7 @@ proposal.
 \renewcommand{\theequation}{\thesection.\arabic{equation}}
 % --- Fine numerazione formule ---
 % Table of Contents
+\newpage
 \tableofcontents
 % End table of contents
 \newpage
@@ -247,6 +292,7 @@ other, will give some indications about the experiments which seem
 most appropriate to identify violations (if they are there) of the
 linear nature of quantum theory (part V).
 
+\newpage
 
 \part{The Measurement Problem of Quantum Mechanics}
 
@@ -2373,6 +2419,7 @@ what they have accomplished and of the difficulties they meet will
 be the subject of the rest of the report.
 
 
+\newpage
 
 \part{Non Relativistic Dynamical Reduction Models}
 
@@ -6305,6 +6352,8 @@ it has been suggested previously, $\gamma(t) \rightarrow \gamma$
 in very short times, so that the reducing dynamics is practically
 the same as the one of CSL.
 
+\newpage
+
 \part{The Interpretation of GRW and CSL Models}
 
 \section{The mass density function} \label{sec012}
@@ -9164,6 +9213,7 @@ and CSL allow us to ``close the circle''.
 
 
 
+\newpage
 
 \part{Relativistic Dynamical Reduction Models}
 
@@ -11291,6 +11341,8 @@ that they are characterized by probabilities which are smaller,
 e.g., than those of classical thermodynamical processes which
 violate the second law of thermodynamics.}.
 
+
+\newpage
 
 \part{Dynamical Reduction Models and Experiments}
 
